--- a/styles.css
+++ b/styles.css
@@ -628,13 +628,31 @@ background-position: top center;
 	),
 	 url(./imgs/lodge.PNG);
 	 background-size: cover;
-		background-position: top center;
+	background-position: top center;
 	} 
 .part:nth-child(4) {
     background-color:rgba(150,255,161, 1);  
+	background-image:linear-gradient(
+		205deg,
+		rgba(150,255,161, .9),
+		rgba(150,255,161, .8)
+	),
+	 url(./imgs/Travel-pic.PNG);
+	 background-size: cover;
+	background-position: top center;
+	
 } 
 .part:nth-child(5) {
       background-color:rgba(85,85,85, 1);
+      background-image:linear-gradient(
+		205deg,
+		rgba(85,85,85, .8),
+		rgba(85,85,85, .7)
+	),
+	 url(./imgs/JS-game.PNG);
+	 background-size: cover;
+		background-position: top center;
+	
 } 
 .part:nth-child(6) {
     background-color:rgba(253,255,153, 1);
